feat(register): adiciona funcionalidade de registrar usuario

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
+@use "./tokens";
+
 /* You can add global styles to this file, and also import other style files */
 * {
   margin: 0;
@@ -10,4 +12,17 @@ html,
 body,
 #root {
   height: 100%;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.app-container {
+  padding: 20px;
 }
