--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,3 +1,9 @@
-<div>
-  <h1>Home</h1>
+<div class="container">
+  <h1>Você é rápido para tomar decisões no vôlei?</h1>
+
+  <p>A tomada de decisão é um das habilidades mais importantes no esporte.</p>
+
+  <button mat-button color="primary" (click)="next()">
+    Teste agora sua habilidade
+  </button>
 </div>
